--- a/styles/style.css
+++ b/styles/style.css
@@ -60,16 +60,15 @@
 }
 .header-container {
     display: flex;
-    justify-content:start;
-    align-items: start;
-    width: 84vw;
-    height: 80vh;
 }
-.header-content img{
-    width: 130.4%;
-    height: 80vh;
-    padding: 0%;
-    margin: 0%;
+.header-content{
+    width: 100%;
+    height: 100%;
+    background-image: url("/source/images/header.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 600px;
+    width: 100%;
 }
 .about-container {
     display: flex;
