--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@
     display: flex;
     list-style: none;
     padding: 8px;
-    margin-right: 80px;
+    margin-right: 40px;
 }
 .nav-bar-menu-button button {
     display: flex;
@@ -50,10 +50,10 @@
     align-items: center;
     padding: 16px;
     margin: 16px;
-    border: 2px solid #000000;
-    background-color: #ffffff;
+    border: 2px solid #fff;
+    background-color: #008647;
+    color: #F8E7CF;
     border-radius: 8px;
-    font-style: normal;
     font-weight: 600;
     font-size: 16px;
     cursor: pointer;
@@ -82,7 +82,9 @@
     align-items: start;
 }
 .about-text {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 24px;
 }
 .about-text p{
@@ -94,7 +96,7 @@
 .cards-container {
     display: flex;
     justify-content: center;
-    margin-top: 24px;
+    margin-top: 8px;
 }
 .cards-content{
     display: flex;
@@ -130,8 +132,9 @@
     align-items: center;
     padding: 16px;
     margin: 16px;
-    border: 2px solid #000000;
-    background-color: #ffffff;
+    border: 2px solid white;
+    background-color: #008647;
+    color: #F8E7CF;
     border-radius: 8px;
     font-style: normal;
     font-weight: 600;
@@ -146,6 +149,7 @@
     background-color: #008748;
 }
 .open-call-content-left{
+    color: #F8E7CF;
     display: flex;
     flex-direction: column;
     text-align: justify;
@@ -169,9 +173,10 @@
     display: flex;
     justify-content: start;
     margin-top: 24px;
-    background-color: #6e2c45;
+    background-color: #441534;
 }
 .for-who-content{
+    Color: #F8E7CF;
     display: flex;
     flex-direction: column;
     text-align: justify;
@@ -184,14 +189,13 @@
 }
 .how-to-container{
     display: flex;
-    justify-content: start;
     margin-top: 24px;
-    background-color: #ffc44f;
+    color: #441534;
 }
 .how-to-content{
     display: flex;
     flex-direction: column;
-    text-align: justify;
+    text-align: center;
     margin: 24px;
     padding: 24px;
 }
