--- a/styles/style.css
+++ b/styles/style.css
@@ -82,6 +82,7 @@
     align-items: start;
 }
 .about-text {
+    color: #441534;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -108,7 +109,7 @@
     display: grid;
     justify-content: center;
     text-align: center;
-    border: #000000 solid 2px;
+    border: white solid 2px;
     margin: 24px;
     padding: 24px;
     height: 280px;
@@ -117,6 +118,26 @@
 .card p{
     font-size: 18px;
     font-weight: 400;
+}
+
+.card-1{
+    color: #441534;
+    background-color: #F8E7CF;
+}
+
+.card-2{
+    color: #441534;
+    background-color: #97C93D;
+}
+
+.card-3{
+    color: #441534;
+    background-color: #F99C1E;
+}
+
+.card-4{
+    color: #441534;
+    background-color: #F0524C;
 }
 
 .button-container{
