--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: "Montserrat";
+    line-height: 1.5;
 }
 .nav-bar-container{
     display: flex;
@@ -152,7 +153,7 @@
     justify-content: center;
     align-items: center;
     padding: 16px;
-    margin: 16px;
+    margin: 32px;
     border: 2px solid white;
     background-color: #008647;
     color: #F8E7CF;
@@ -166,7 +167,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 24px;
+    margin-top: 44px;
     background-color: #008748;
 }
 .open-call-content-left{
@@ -180,7 +181,7 @@
     width: 600px;
 }
 .open-call-content-left p{
-    font-size: 18px;
+    font-size: 24px;
 }
 .open-call-content-right{
     display: flex;
@@ -193,7 +194,6 @@
 .for-who-container{
     display: flex;
     justify-content: start;
-    margin-top: 24px;
     background-color: #441534;
 }
 .for-who-content{
@@ -206,7 +206,7 @@
 
 }
 .for-who-content p{
-    font-size: 18px;
+        font-size: 24px;
 }
 .how-to-container{
     display: flex;
@@ -224,5 +224,5 @@
     margin-bottom: 24px;
 }
 .how-to-content p{
-    font-size: 18px;
+    font-size: 24px;
 }
