--- a/styles/style.css
+++ b/styles/style.css
@@ -178,8 +178,8 @@
     text-align: justify;
     margin: 24px;
     padding: 24px;
-    height: 280px;
-    width: 600px;
+    height:280px;
+    width: 800px;
 }
 .open-call-content-left p{
     font-size: 24px;
@@ -214,7 +214,7 @@
 }
 .how-to-container{
     display: flex;
-    margin-top: 24px;
+    flex-direction: column;
     color: #441534;
 }
 .how-to-content{
@@ -230,3 +230,44 @@
 .how-to-content p{
     font-size: 24px;
 }
+.about-simbi-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #441534;
+    background-color: #F8E7CF;
+}
+.about-simbi-content-left{
+    display: flex;
+    flex-direction: column;
+    margin: 24px;
+    padding: 24px;
+}
+.about-simbi-content-left p{
+    font-size: 24px;
+}
+.about-simbi-content-right{
+    display: flex;
+    justify-content: center;
+    margin: 24px;
+}
+.footer-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #441534;
+    
+}
+.footer-content{
+    display: grid;
+    justify-content: center;
+    text-align: center;
+    margin: 24px;
+    padding: 24px;
+}
+.footer-image{
+    display: block;
+    margin: 0 auto;
+    width: 80px;
+}
+
