--- a/styles/style.css
+++ b/styles/style.css
@@ -149,11 +149,10 @@
 }
 .button-content button{
     display: flex;
-    height: 60px;
-    width: 600px;
+    height: 60%;
+    width: 100%;
     justify-content: center;
     align-items: center;
-    padding: 16px;
     margin: 32px;
     border: 2px solid #008647;
     background-color: #008647;
@@ -190,7 +189,7 @@
     margin: 24px;
     padding: 24px;    
     height: 500px;
-    width: 800px;
+    width: auto;
 }
 .for-who-container{
     display: flex;
@@ -270,4 +269,3 @@
     margin: 0 auto;
     width: 80px;
 }
-
