--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family: "Montserrat";
     line-height: 1.5;
+    /* box-sizing: border-box; */
 }
 .nav-bar-container{
     display: flex;
@@ -147,10 +148,17 @@
     justify-content: center;
     margin-top: 24px;
 }
+.button-content{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
 .button-content button{
     display: flex;
-    height: 60%;
-    width: 100%;
+    height: 48px;
+    width: 400px;
     justify-content: center;
     align-items: center;
     margin: 32px;
