--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@
     align-items: center;
     padding: 24px;
     height: 80px;
+    overflow: hidden;
 }
 .nav-bar-content{
     width: 100%;
@@ -62,21 +63,23 @@
 }
 .header-container {
     display: flex;
+    overflow: hidden;
 }
 .header-content{
     width: 100%;
     height: 100%;
     background-image: url("/source/images/header.png");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% auto;
     height: 870px;
-    width: 100%;
 }
 .about-container {
     display: flex;
     justify-content:start;
     align-items: start;
     margin-top: 24px;
+    overflow: hidden;
+
 }
 .about-content {
     display: flex;
@@ -195,7 +198,7 @@
     display: block;
     margin: 24px;
     padding: 24px;    
-    width: 100%;
+    width: 90%;
     max-width: 100%;
     height: auto;
 }
@@ -203,6 +206,7 @@
     display: flex;
     justify-content: start;
     background-color: #441534;
+    overflow: hidden;
 }
 .for-who-content{
     Color: #F8E7CF;
@@ -223,6 +227,8 @@
     display: flex;
     flex-direction: column;
     color: #441534;
+    overflow: hidden;
+
 }
 .how-to-content{
     display: flex;
@@ -242,6 +248,7 @@
     justify-content: space-between;
     align-items: center;
     color: #441534;
+    width: 100%;
     background-color: #F8E7CF;
     overflow: hidden;
 }
@@ -257,7 +264,6 @@
 .about-simbi-content-right img{
     display: block;
     margin: 24px;
-    justify-content: center;
     width: 800px;
     height: 100%;
 
@@ -267,6 +273,8 @@
     justify-content: center;
     align-items: center;
     color: #441534;
+    overflow: hidden;
+
     
 }
 .footer-content{
@@ -280,4 +288,42 @@
     display: block;
     margin: 0 auto;
     width: 80px;
+}
+
+/* Media Queries */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .nav-bar-container{
+        height: 100px;
+    }
+    .nav-logo{
+        height: 100px;
+    }
+    .nav-bar-menu-list{
+        padding: 0;
+}
+
+.header-container{
+    height: 32vh;
+    background-size: cover; 
+}
+
+.open-call-container{
+    flex-direction: column;
+    height: 100%;
+    background-color: #008748;
+
+}
+
+.about-simbi-container{
+    flex-direction: column;
+    height: 100%;
+    background-color: #F8E7CF;
+}
+
+.about-simbi-content-right img{
+    width: 500px;
+
+}
 }
