--- a/styles/style.css
+++ b/styles/style.css
@@ -121,6 +121,11 @@
     padding: 24px;
     height: 280px;
     width: 280px;
+
+    transition: ease-in-out 0.5s;
+}
+.card:hover{
+    transform: translateY(-20px);
 }
 .card p{
     font-size: 18px;
@@ -158,7 +163,22 @@
     width: 100%;
     justify-content: center;
     align-items: center;
+
+    animation: pulsate 1.5s infinite ease-in-out;
 }
+
+@keyframes pulsate {
+    0% {
+        transform: scale(1); /* Começa no tamanho normal */
+    }
+    50% {
+        transform: scale(1.1); /* Aumenta o tamanho para 110% */
+    }
+    100% {
+        transform: scale(1); /* Retorna ao tamanho normal */
+    }
+}
+
 .button-content button{
     display: flex;
     height: 48px;
